Fix tweaks on dropdown menu

--- a/_includes/dropdown-menu.html
+++ b/_includes/dropdown-menu.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class="dropdown-outer-ul">
 	<li class="dropdown-home"><a href="#">{% include logo-lavender.svg %}</a></li>
 	<li class="dropdown-wrapper"><a href="#">{% include hamburger-menu-blocky.svg %}</a>
 		<ul class="dropdown">
