--- a/assets/css/_sass/_nav/_dropdown-menu.scss
+++ b/assets/css/_sass/_nav/_dropdown-menu.scss
@@ -26,27 +26,30 @@ ul li ul:hover {
 	display: block;
 }
 
-ul li ul li {
+ul.dropdown-outer-ul li ul li {
 	clear: both;
 	width: 100%;
 }
 
 // Tweaks I'm adding:
 
-ul {
+ul.dropdown-outer-ul {
 	display: flex;
 	justify-content: space-between;
 	margin: 0;
 	padding: 1rem 1.5rem;
 }
 
-ul li ul  {
+ul.dropdown-outer-ul li ul  {
 	position: relative;
 	right: 0;
 }
 
 li.dropdown-wrapper {
 	text-align: right;
+	a {
+		height: calc(56px-14px);
+	}
 }
 
 //ul li ul li:nth-of-type(2) {
@@ -58,7 +61,7 @@ li.dropdown-wrapper {
 	background-color: lavender;
 } */
 
-ul {
+ul.dropdown-outer-ul {
 	height: 56px;
 	background-color: black;
 }
@@ -157,7 +160,7 @@ ul.dropdown {
 	right: 0;
 	margin: 0;
 	padding: 0;
-	transform: translateX(-2rem) translateY(-1rem);
+	transform: translateX(2rem) translateY(-1rem);
 	li {
 		display: flex;
 	//	align-items: center;
