Tweak z-index of menu and fix links on dropdown menu

--- a/_includes/dropdown-menu.html
+++ b/_includes/dropdown-menu.html
@@ -2,9 +2,9 @@
 	<li class="dropdown-home"><a href="#">{% include logo-lavender.svg %}</a></li>
 	<li class="dropdown-wrapper"><a href="#">{% include hamburger-menu-blocky.svg %}</a>
 		<ul class="dropdown">
-			<li><a href="#">About</a></li>
- 			<li><a href="#">Blog</a></li>
-  			<li><a href="#">Portfolio</a></li>
+			<li><a href="{{ '/about' | relative_url }}">About</a></li>
+ 			<li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+  			<li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
   		</ul>
 	</li>
 </ul>
