--- a/assets/css/_sass/_pages/_new-intake.scss
+++ b/assets/css/_sass/_pages/_new-intake.scss
@@ -3,28 +3,28 @@
 // Title //
 
 .intake__title {
-
+	color: black;
+	padding-bottom: 2rem;
 }
 
 .intake-title__text {
-	max-width: 91.67%;
 	margin: .25em auto;
 	margin-top: .5em;
-	font-size: 3rem;
-	font-family: $futura-bold;
+	font-size: 3.5rem;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	text-align: center;
-	color: black;
 	border-bottom-width: 0px;
-	@media screen and (max-width: 425px) {
-		
+	@media screen and (min-width: 600px) {
+		font-size: 3.5rem;
 	}
 	@media screen and (min-width: 768px) {
-		font-size: 4rem;
+		font-size: 4.5rem;
 	}
 	@media screen and (min-width: 900px) {
 		margin: .25em auto;
-		font-size: 5rem;
-	}
+		font-size: 5rem	};
+
 	@media screen and (min-width: 1440px) {
 		font-size: 5rem;
 	}
@@ -33,7 +33,7 @@
 [class*="intake-title__line--"] {
 	height: 2px;
 	margin: calc(1.5rem - 1px) auto;
-	background-color: $mypurple;
+	background-color: black;
 	@media screen and (max-width: 425px) {
 		margin: calc(1rem - 1px) auto;
 	}
@@ -62,11 +62,11 @@
 	}
 	a {
 		color: black;
-		border-bottom: 2px solid $mypurple;
+		border-bottom: 2px solid $midbluegreen;
 		transition: background-color .3s;
 		&:hover, &:focus {
 			color: black;
-			background-color: $mypurple;
+			background-color: $midbluegreen;
 		}
 	}
 	@media screen and (max-width: 425px) {
@@ -89,12 +89,17 @@
 	justify-content: center;
 	width: 83.33%;
 	margin: 0 auto;
-	border: 2px solid $mypurple;
+	border: 2px solid $midbluegreen;
 	@media screen and (max-width: 425px) {
 		width: 91.67%;
 	}
 }
 
 .intake__iframe {
+	position: relative;
+	width: 100%;
 	margin: 0 auto;
+	@media screen and (min-width: 768px) {
+		width: 640px;
+	}
 }
