--- a/assets/css/_sass/_pages/_intake.scss
+++ b/assets/css/_sass/_pages/_intake.scss
@@ -1,4 +1,6 @@
-/* Intake Styles: */
+/* New Intake: */
+
+// Title //
 
 .intake__title {
 	color: black;
@@ -21,16 +23,82 @@
 	}
 	@media screen and (min-width: 900px) {
 		margin: .25em auto;
-		font-size: 5rem;
-	}
+		font-size: 5rem	};
+
 	@media screen and (min-width: 1440px) {
 		font-size: 5rem;
+	}
+}
+
+[class*="intake-title__line--"] {
+	height: 2px;
+	margin: calc(1.5rem - 1px) auto;
+	background-color: black;
+	@media screen and (max-width: 425px) {
+		margin: calc(1rem - 1px) auto;
+	}
+}
+
+.intake-title__line--long {
+	width: 83.33%;
+}
+
+.intake-title__line--med {
+	width: 75%;
+}
+
+.intake-title__line--short {
+	width: 66.67%;
+}
+
+// Text content //
+
+.intake__text {
+	width: 83.33%;
+	margin: 0 auto;
+	p {
+		font-family: $source-sans;
+		font-size: 20px;
+	}
+	a {
+		color: black;
+		border-bottom: 2px solid $midbluegreen;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			color: black;
+			background-color: $midbluegreen;
+		}
+	}
+	@media screen and (max-width: 425px) {
+		p {
+			font-size: 18px;
+		}
+	}
+	@media screen and (min-width: 1440px) {
+		p {
+			font-size: 24px;
+		}
+	}
+}
+
+// iframe //
+
+.intake__form {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	width: 83.33%;
+	margin: 0 auto;
+	border: 2px solid $midbluegreen;
+	@media screen and (max-width: 425px) {
+		width: 91.67%;
 	}
 }
 
 .intake__iframe {
 	position: relative;
 	width: 100%;
+	margin: 0 auto;
 	@media screen and (min-width: 768px) {
 		width: 640px;
 	}
