--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,7 +43,7 @@
 @import '_pages/intake';
 @import '_pages/new-about';
 @import '_pages/new-home';
-@import '_pages/new-intake';
+//@import '_pages/new-intake';
 //@import '_pages/portfolio';
 @import '_pages/new-portfolio';
 @import '_pages/portfolio-modal';
