--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,14 +38,12 @@
 @import '_pages/about';
 @import '_pages/blog';
 @import '_pages/contact';
-@import '_pages/hire-me';
+///@import '_pages/hire-me';
 @import '_pages/home';
 @import '_pages/intake';
-@import '_pages/new-about';
-@import '_pages/new-home';
+//@import '_pages/new-about';
 //@import '_pages/new-intake';
 //@import '_pages/portfolio';
-@import '_pages/new-portfolio';
+@import '_pages/portfolio';
 @import '_pages/portfolio-modal';
 @import '_pages/site-map';
-@import '_pages/new-home-2'
