--- a/assets/css/_sass/_pages/_about.scss
+++ b/assets/css/_sass/_pages/_about.scss
@@ -1,122 +1,198 @@
-/* New About Styles: */
+// New About: //
 
-// Section 0: Wrapper
-
-.about-wrapper {
-	position: relative;
+.na__nav {
+	height: 3rem;
+	width: 100%;
+	background-color: $mypurple;
 }
 
-.about-main-content {
-	position: relative;
-	display: grid;
-	grid-template-areas: 'title'
-						 'bio'
-						 'contact'
-						 'hire';
-	grid-template-columns: 1fr;
-	padding: 1.5rem 4.167%;
+// Title //
+
+.na__title {
 
 }
 
-// Section 1: Page title
-
-.about__big-title {
-	grid-area: title;
-	position: relative;
-	h1 {
-		line-height: 1;
-		margin: .25em 0;
-		padding-bottom: .0625em;
-		font-size: 2.25rem;
-		font-family: 'Oswald', sans-serif;
-		font-weight: 700;
-		text-transform: uppercase;
-		border-bottom: 1px solid $halfgray;
-	}
+.na-title__text {
+	margin: .25em auto;
+	margin-top: .5em;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
+	font-size: 3.5rem;
+	text-align: center;
+	border-bottom-width: 0px;
 	@media screen and (min-width: 600px) {
-		h1 {
-			font-size: 2.75rem;
-		}
+		font-size: 3.5rem;
 	}
 	@media screen and (min-width: 768px) {
-		h1 {
-			font-size: 3.5rem;
+		font-size: 4.5rem;
+	}
+	@media screen and (min-width: 900px) {
+		margin: .25em auto;
+		font-size: 5rem;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 5rem;
+	}
+}
+
+[class*="na-title__line--"] {
+	height: 2px;
+	margin: calc(1.5rem - 1px) auto;
+	background-color: $jet;
+	@media screen and (max-width: 425px) {
+		margin: calc(1rem - 1px) auto;
+	}
+}
+
+.na-title__line--long {
+	width: 83.33%;
+}
+
+.na-title__line--med {
+	width: 75%;
+}
+
+.na-title__line--short {
+	width: 66.67%;
+}
+
+// Bio //
+
+.na__bio {
+	width: 83.33%;
+	margin: 0 auto;
+	max-width: 1000px;
+	@media screen and (max-width: 425px) {
+		width: 91.67%;
+	}
+	@media screen and (min-width: 1440px) {
+	//	max-width: 75%;
+	}
+}
+
+.na-bio__title, .na-contact__title {
+	margin: .25em 0;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
+	font-size: 3rem;
+	text-transform: uppercase;
+	@media screen and (min-width: 900px) {
+		font-size: 3.5rem;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 3.5rem;
+	}
+}
+
+.na-bio__title {
+	padding-bottom: 1rem;
+	border-bottom: 2px solid $mylavender;
+}
+
+.na-contact__title {
+//	color: $mylavender;
+}
+
+.na-bio__text {
+	p {
+		font-family: $source-sans;
+		font-size: 1.125rem;
+		line-height: 1.4;
+	}
+	@media screen and (min-width: 900px) {
+		p {
+			font-size: 1.25rem;
+		}
+	}
+	@media screen and (min-width: 1440px) {
+		p {
+			font-size: 24px;
 		}
 	}
 }
 
-// Section 2: Bio
+// Contact //
 
-.about__bio {
-	grid-area: bio;
-	position: relative;
+.na__contact {
+	width: 83.33%;
+	max-width: 1000px;
+	margin: 3rem auto;
+	margin-top: 0; // 1.5rem;
 
-}
-
-.about-bio__title {
-
-}
-
-.about-bio__content {
-
-}
-
-// ul
-.about-bio__links {
-	padding-left: 0;
-	li {
-		list-style-type: none;
+	@media screen and (max-width: 425px) {
+		width: 91.67%;
+	}
+	@media screen and (min-width: 1440px) {
+	//	max-width: 75%;
 	}
 }
 
-// Section 3: Contact
-
-.about__contact {
-	grid-area: contact;
-	position: relative;
+.na-contact__title {
+	padding-bottom: 1rem;
+	border-bottom: 2px solid $midbluegreen;
 }
 
-.about-contact__title {
+.na-contact__content {
 
 }
 
 // ul
-.about-contact__list {
-	padding-left: 0;
-}
-
-// li
-.about-contact__item {
+.na-contact__row {
 	position: relative;
 	display: flex;
 	align-items: center;
-	height: 2rem;
-	margin: .5rem 0;
 	list-style-type: none;
-	img {
-		height: 2em;
-		padding-right: 2em;
-	}
-	a {
-
-	}
-}
-
-// Section 4: Hiring
-
-.about__hire {
-	grid-area: hire;
-	position: relative;
-}
-
-.about-hire__title {
-
-}
-
-// ul
-.about-hire__content {
 	padding-left: 0;
-	li {
-		list-style-type: none;
+}
+
+.na-contact__svg {
+	display: flex;
+	align-items: center;
+	padding-right: 1.5rem;
+	img {
+		height: 2rem;
+	}
+	@media screen and (min-width: 1440px) {
+		img {
+			height: 39px;
+		}
+	}
+}
+
+.na-contact__type {
+	width: 5.5rem;
+	font-family: $source-sans; // $futura;
+	font-size: 20px;
+	font-weight: bold;
+	line-height: 1.4;
+	@media screen and (max-width: 900px) {
+		width: 5rem;
+		font-size: 18px;
+	}
+	@media screen and (min-width: 1440px) {
+		width: 6.5rem;
+		font-size: 24px;
+	}
+}
+
+.na-contact__user {
+	font-family: $source-sans; //  $futura;
+	font-size: 20px;
+	line-height: 1.4;
+	a {
+		font-weight: 400;
+		color: black;
+		border-bottom: 2px solid $mylavender;
+		transition: background-color .3s;
+		&:hover, &:focus {
+			color: black;
+			background-color: $mylavender;
+		}
+	}
+	@media screen and (max-width: 900px) {
+		font-size: 18px;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 24px;
 	}
 }
