--- a/_includes/dropdown-menu.html
+++ b/_includes/dropdown-menu.html
@@ -1,5 +1,5 @@
 <ul class="dropdown-outer-ul">
-	<li class="dropdown-home"><a href="#">{% include logo-lavender.svg %}</a></li>
+	<li class="dropdown-home"><a href="{{ site.url }}">{% include logo-lavender.svg %}</a></li>
 	<li class="dropdown-wrapper"><a href="#">{% include hamburger-menu-blocky.svg %}</a>
 		<ul class="dropdown">
 			<li><a href="{{ '/about' | relative_url }}">About</a></li>
