--- a/assets/css/_sass/_pages/_home.scss
+++ b/assets/css/_sass/_pages/_home.scss
@@ -20,6 +20,7 @@
 		}
 	}
 	max-width: 100vw;
+	margin-top: -56px; // main body content sets 56px
 }
 
 .home__page-1 {
@@ -38,8 +39,6 @@
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-//	margin-top: 56px;
-
 }
 
 .home-1__text-wrapper {
