--- a/_includes/new-footer.html
+++ b/_includes/new-footer.html
@@ -5,8 +5,8 @@
 		<div class="new-footer__link-wrapper">
 			<li class="new-footer__link"><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
 			<li class="new-footer__link"><a href="{{ '/about' | relative_url }}">About</a></li>
-			<!--li class="new-footer__link"><a href="{{ '/intake' | relative_url }}">Intake</a></li-->
 			<li class="new-footer__link"><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+			<li class="new-footer__link"><a href="{{ '/intake' | relative_url }}">Intake</a></li>
 		</div>
 	</ul>
 </footer>
