Add Marx topic overview & fix cascade on lists

--- a/assets/css/_sass/_layouts/_blog-post.scss
+++ b/assets/css/_sass/_layouts/_blog-post.scss
@@ -154,7 +154,7 @@
 		padding-left: 1.25em;
 		list-style: none;
 		counter-reset: ol-counter;
-		li {
+		> li {
 			position: relative;
 		//	font-size: 20px;
 			counter-increment: ol-counter;
