--- a/assets/css/_sass/_pages/_home.scss
+++ b/assets/css/_sass/_pages/_home.scss
@@ -90,6 +90,9 @@
 	white-space: nowrap;
 	@media screen and (min-width: 600px) {
 		font-size: 2.5rem;
+		span {
+			display: none;
+		}
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 3rem;
