--- a/_includes/dropdown-menu.html
+++ b/_includes/dropdown-menu.html
@@ -3,8 +3,9 @@
 	<li class="dropdown-wrapper"><a href="#">{% include hamburger-menu-blocky.svg %}</a>
 		<ul class="dropdown">
 			<li><a href="{{ '/about' | relative_url }}">About</a></li>
+			<li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
+			<li><a href="{{ '/intake' | relative_url }}">Intake</a></li>
  			<li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
-  			<li><a href="{{ '/portfolio' | relative_url }}">Portfolio</a></li>
   		</ul>
 	</li>
 </ul>
