Add under construction message to blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,5 +15,7 @@ layout: new-default
 </main>
 
 <article class="post__content">
+	{{ '## Note: All blog posts at this time are currently placeholders and under construction.' | markdownify }}
+
 	{{ content }}
 </article>
