Add JS & CSS for syntax highlighting using Prism.js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,700,700i|Montserrat:400,400i,700,700i,900,900i|Manrope:wght@400;700|Roboto:wght@400;700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/dbo3mmi.css">
     <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}" type="text/css">
+    <link rel="stylesheet" href="{{ 'assets/css/prism.css' | relative_url }}" type="text/css">
 </head>
