--- a/_layouts/new-default.html
+++ b/_layouts/new-default.html
@@ -9,5 +9,6 @@
     {% include new-footer.html %}
     <script src="{{ 'assets/js/hammer.min.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ 'assets/js/prism.js' | relative_url }}"></script>
 </body>
 </html>
