Clean up old files, delete and rename some

--- a/_layouts/new-default.html
+++ b/_layouts/new-default.html
@@ -6,7 +6,7 @@
 	<main class="body__main-content-wrapper">
 	    {{ content }}
 	</main>
-    {% include new-footer.html %}
+    {% include footer.html %}
     <script src="{{ 'assets/js/hammer.min.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/prism.js' | relative_url }}"></script>
