--- a/assets/css/_sass/_nav/_footer.scss
+++ b/assets/css/_sass/_nav/_footer.scss
@@ -1,38 +1,95 @@
-/* Footer Styles: */
+// Footer //
 
-.footer-wrapper {
-	grid-area: footer;
-	position: relative;
-	margin: 0;
-	padding: 1.5em;
-	background-color: $grayblue;
-}
-
-.footer-border {
+.new-footer {
 	display: flex;
-	flex-flow: column nowrap;
-	justify-content: center;
 	align-items: center;
-	border: 1px solid $antiflashwhite;
-}
-
-.footer-title {
-	color: $antiflashwhite;
+	justify-content: center;
+	min-height: 40vh;
+	width: 100%;
+	padding: .35em;
+	background-color: black;
+	@media screen and (min-width: 600px) {
+		padding: 1.5em;
+	}
 }
 
 // ul
-.footer-list {
+.new-footer__content-wrapper {
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
+	width: calc(100% - 1.5em);
+	padding: 1em 0;
+	border: 4px solid $mylavender;
+	list-style-type: none;
+	@media screen and (min-width: 600px) {
+		padding-left: 1em;
+	}
+	
+}
+
+.new-footer__link-wrapper {
+	display: flex;
+	padding: 2rem 0;
+}
+
+[class*="new-footer__link"] {
+	margin: 0;
+	font-family: $futura;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.4;
+	a {
+		border-bottom-width: 0px;
+		transition: color .3s, background-color .3s;
+	}
+	@media screen and (min-width: 1440px) {
+		font-size: 24px; // 1.5rem
+	}
+}
+
+.new-footer__link:first-of-type {
 	padding-left: 0;
 }
 
-// li
-.footer-list__item {
-	list-style-type: none;
+.new-footer__link--name {
+	font-family: $acier-bat-gris; // $futura-bold;
+	font-size: 2rem;
+	font-weight: 400;
+	margin: 0;
+	padding: 1rem 0;
+	text-transform: uppercase;
+	border-bottom: 2px solid $mylavender;
 	a {
-		color: $regblack;
-		border-bottom: 1px solid $regblack;
+		font-weight: 400;
+		color: white; // $mylavender;
+		&:hover, &:focus {
+			color: black;
+			background-color: white; // $mylavender;
+		}
+
+	}
+	@media screen and (max-width: 374px) {
+		font-size: 1.75rem;
+	}
+	@media screen and (min-width: 600px) {
+		font-size: 2.5rem;
+	}
+}
+
+.new-footer__link {
+	padding: 0 .5rem;
+	a {
+		color: $mylavender;
+		&:hover, &:focus {
+			color: black;
+			background-color: $mylavender;
+		}
+	}
+	@media screen and (max-width: 374px) {
+		font-size: 1.125rem;
+	}
+	@media screen and (min-width: 425px) {
+		padding: 0 1rem;
 	}
 }
